hotword: disable at build time by default
Commit f269d3b548203e217e8c0080c2e22e7ae3efb51e upstream:

"""
Hotwording downloads a shared module from the web store containing a
NaCl module. There is a desire to build and distribute Chromium
without this happening. This change adds an "enable_hotwording" build
flag that is enabled by default, but can be disabled at compile time.

BUG=491435
Review URL: https://codereview.chromium.org/1160243004
Cr-Commit-Position: refs/heads/master@{#333548}
"""

Hard-disable hotwording by default even on a build level.

--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -17,6 +17,11 @@ if (is_desktop_linux) {
   import("//build/config/linux/pkg_config.gni")
 }
 
+declare_args() {
+  # 'Ok Google' hotwording is NOT enabled.
+  enable_hotwording = false
+}
+
 about_credits_file = "$target_gen_dir/about_credits.html"
 additional_modules_list_file =
     "$root_gen_dir/chrome/browser/internal/additional_modules_list.txt"
@@ -437,6 +442,10 @@ static_library("browser") {
     } else if (safe_browsing_mode == 2) {
       defines += [ "MOBILE_SAFE_BROWSING" ]
     }
+  }
+
+  if (enable_hotwording) {
+    defines += [ "ENABLE_HOTWORDING" ]
   }
 
   if (is_linux) {
